fix: add flex-wrap to nav-list

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ background-color: #72c972;
 
 .nav-list {
     display: flex;
+    flex-wrap: wrap;
     justify-content: baseline;
     align-items: center;
     list-style: none;
